--- a/3.html
+++ b/3.html
@@ -2,10 +2,10 @@
 <html>
 <head>
   <title>무라카미 하루키</title>
-  <meta charset="uft-8">
+  <meta charset="utf-8">
 </head>
 <body>
-  <h1><a href="">BOOK</a></h1>
+  <h1><a href="index.html">BOOK</a></h1>
 <ol>
   <li><a href="1.html"> 무라카미 하루키</a></li>
   <li><a href="2.html"> 알랭드보통</a></li>
@@ -18,5 +18,27 @@
 한 낮의 해변에 드러누워 눈을 감아도<br><br>
 태양이 보이는 것 같은 느낌<br><br>
 그런식으로 너는 늘 내안에 있었다.</p>
+<p>
+  <div id="disqus_thread"></div>
+<script>
+    /**
+    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+    /*
+    var disqus_config = function () {
+    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
+    */
+    (function() { // DON'T EDIT BELOW THIS LINE
+    var d = document, s = d.createElement('script');
+    s.src = 'https://web1-pi5vbk4f9d.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+    })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+</P>
+
 </body>
 </html>
