--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>무라카미 하루키</title>
-  <meta charset="uft-8">
+  <meta charset="utf-8">
 </head>
 <body>
   <h1><a href="index.html">BOOK</a></h1>
@@ -12,6 +12,7 @@
   <li><a href="3.html"> 에쿠니 가오리</a></li>
 </ol>
 <h2>무라카미 하루키</h2>
+<p><iframe width="560" height="315" src="https://www.youtube.com/embed/xp6C5pcnP4k" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
 <p><a href="https://news.nate.com/view/20210120n08159" target="_blank" title="html5">이탈리아</a>에서의 운전이 즐거운 것은 <strong><u>수동 차량</u></strong>이 주류라는데
 에 있다. 시민들 대부분은 기어를 바꾸며 배기량이 적은 엔진
 을 윙윙 효율적으로 회전시키면서 시원하게 달린다. 그러한
@@ -20,5 +21,26 @@
 <img src="italian car.jpg" width="50%"></p><p style="margin-top:45px;">초밥집 주인은 되도록 말이 없는 사람이 좋을 것 같다.
 그리고 손님이 재료에 관해 물으면 성실하게 대답하는
 사람, 이게 가장 우선이다.</p>
+<p>
+  <div id="disqus_thread"></div>
+<script>
+    /**
+    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+    /*
+    var disqus_config = function () {
+    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
+    */
+    (function() { // DON'T EDIT BELOW THIS LINE
+    var d = document, s = d.createElement('script');
+    s.src = 'https://web1-pi5vbk4f9d.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+    })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+</P>
 </body>
 </html>
