--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 <head>
   <title>무라카미 하루키</title>
   <meta charset="utf-8">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2NYC1HKPRF"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-2NYC1HKPRF');
+</script>
 </head>
 <body>
   <h1><a href="index.html">BOOK</a></h1>
